# evidence_fashion_recommender

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
data/kb/: fashion_rules.csv
notebooks/: 01_environment_check.ipynb  02_polyvore_eda.ipynb  03_fashionclip_embeddings.ipynb  04_outfit_graph.ipynb  05_fashionclip_retrieval.ipynb
