[project]
name = "evidence-fashion-recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "huggingface-hub>=1.21.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
