[project]
name = "evidence-fashion-recommender"
version = "0.1.0"
description = "Evidence-constrained multimodal fashion recommendation with faithful explanations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate",
    "datasets",
    "faiss-cpu",
    "huggingface-hub",
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "pyarrow",
    "rich",
    "scikit-learn",
    "sentence-transformers",
    "tqdm",
    "transformers",
]

[tool.uv]
package = false
